@@ -1,5 +1,8 @@
 2009-07-04  Russ Allbery  <rra@stanford.edu>
 
+	* ANSIColor.pm: Add an example of checking color attributes by
+	catching exceptions from color() to the documentation.
+
 	* ANSIColor.pm: Add FAINT as a synonym for DARK and export it when
 	constants are requested.
 	* t/basic.t: Test faint and FAINT as a synonym for dark/DARK.
